# coolstyleserver

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  cool-stylesheet.js  coolstyleserver.js  deno.json  server.js
public/: cool-stylesheet.js
src/: args.rs  error.rs  main.rs  routes.rs  state.rs
src/routes/: dist.rs  fallback.rs  fetch.rs  js.rs  mod.rs  proxy.rs  public.rs  root.rs  watch.rs
