[package]
name = "coolstyleserver"
version = "2.6.7"
edition = "2021"
license = "MIT"
authors = ["Erick Merchant <erickmerchant@gmail.com>"]
description = "a proxy server for stylesheet hot reloading"
homepage = "https://github.com/erickmerchant/coolstyleserver"
documentation = "https://github.com/erickmerchant/coolstyleserver"
repository = "https://github.com/erickmerchant/coolstyleserver.git"
readme = "README.md"
keywords = ["css", "hmr"]

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-stream = "0.3.5"
axum = "0.8.1"
camino = "1.1.6"
clap = { version = "4.3.11", features = ["derive"] }
futures = "0.3.28"
hyper = { version = "1.0.1" }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
lol_html = "2.0.0"
mime_guess = "2.0.5"
notify = "8.0.0"
pathdiff = "0.2.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.100"
sourcemap = "9.0.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
